# src/pytailor/api/workflow.py
@@ -9,7 +9,8 @@ from pytailor.common.base import APIBase
 from pytailor.common.state import State
 from pytailor.exceptions import BackendResourceError
 from pytailor.execution import SerialRunner
-from pytailor.models import Workflow as WorkflowModel, WorkflowCreate, TaskUpdate
+from pytailor.models import Workflow as WorkflowModel, WorkflowCreate, TaskUpdate, \
+    TaskOperation, TaskOperationType
 from pytailor.utils import dict_keys_str_to_int, dict_keys_int_to_str
 
 from .dag import DAG
@@ -128,17 +129,16 @@ class Workflow(APIBase):
     def reset_task(self, task_id: str):
         """Reset task."""
         self.__assert_not_state_pre()
-        task_update = TaskUpdate(
-            task_id=task_id,
-            state=State.READY.name,
+        task_operation = TaskOperation(
+            type=TaskOperationType.RESET,
         )
         with RestClient() as client:
             self._handle_request(
-                client.reset_task,
+                client.perform_task_operation,
                 self.id,
                 self.project.id,
                 task_id,
-                task_update,
+                task_operation,
                 error_msg=f"Could not reset task {task_id}"
             )
 
