# src/pytailor/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  openapi.json
-#   timestamp: 2020-10-10T10:34:56+00:00
+#   timestamp: 2020-10-12T05:41:42+00:00
 
 from __future__ import annotations
 
@@ -108,6 +108,10 @@ class TaskCheckout(BaseModel):
 
 class Context1(Context):
     pass
+
+
+class TaskOperationType(Enum):
+    RESET = "RESET"
 
 
 class TaskState(Enum):
@@ -302,6 +306,10 @@ class Project(BaseModel):
     users: Optional[List[str]] = Field(
         [], title="the users who are a member of this account, by id"
     )
+
+
+class TaskOperation(BaseModel):
+    type: Optional[TaskOperationType] = None
 
 
 class TaskRun(BaseModel):
